# zabbix-nextcloud-scan

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  nextcloud_scan.py  pyproject.toml  zbx_template_nextcloud_scan.xml
